feat(argo-rollouts): Add rollout plugin gloo platform rbac
Signed-off-by: Brian Gottfried <bgottfried91@gmail.com>

--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -271,6 +271,8 @@ providerRBAC:
     apisix: true
     # -- Adds RBAC rules for the Contour provider, see `https://github.com/argoproj-labs/rollouts-plugin-trafficrouter-contour/blob/main/README.md`
     contour: true
+    # -- Adds RBAC rules for the Gloo Platform provider, see `https://github.com/argoproj-labs/rollouts-plugin-trafficrouter-glooplatform/blob/main/README.md`
+    glooPlatform: true
 
 dashboard:
   # -- Deploy dashboard server
