--- a/charts/argo-rollouts/templates/controller/clusterrole.yaml
+++ b/charts/argo-rollouts/templates/controller/clusterrole.yaml
@@ -267,5 +267,14 @@ rules:
     - watch
     - update
 {{- end }}
+{{- if .Values.providerRBAC.providers.glooPlatform }}
+  # Access needed when using the Gloo Platform provider
+- apiGroups:
+    - networking.gloo.solo.io
+  resources:
+    - routetables
+  verbs:
+    - '*'
+{{- end }}
 {{- end }}
 {{- end }}
