--- a/charts/argo-cd/templates/argocd-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-server/deployment.yaml
@@ -357,13 +357,22 @@ spec:
         lifecycle:
           {{- toYaml . | nindent 10 }}
         {{- end }}
+      {{- with .Values.server.extraContainers }}
+        {{- tpl (toYaml .) $ | nindent 6 }}
+      {{- end }}
+      {{- if or .Values.server.initContainers (and .Values.server.extensions.enabled .Values.server.extensions.extensionList) }}
+      initContainers:
+      {{- with .Values.server.initContainers }}
+        {{- tpl (toYaml .) $ | nindent 6 }}
+      {{- end }}
       {{- if .Values.server.extensions.enabled }}
-      - name: argocd-extensions
-        image: {{ .Values.server.extensions.image.repository }}:{{ .Values.server.extensions.image.tag }}
-        imagePullPolicy: {{ .Values.server.extensions.image.imagePullPolicy }}
+      {{- range .Values.server.extensions.extensionList }}
+      - name: {{ .name }}
+        image: {{ $.Values.server.extensions.image.repository }}:{{ $.Values.server.extensions.image.tag }}
+        imagePullPolicy: {{ default $.Values.global.image.imagePullPolicy $.Values.server.extensions.image.imagePullPolicy }}
         resources:
-          {{- toYaml .Values.server.extensions.resources | nindent 10 }}
-        {{- with .Values.server.extensions.containerSecurityContext }}
+          {{- toYaml $.Values.server.extensions.resources | nindent 10 }}
+        {{- with $.Values.server.extensions.containerSecurityContext }}
         securityContext:
           {{- toYaml . | nindent 10 }}
         {{- end }}
@@ -372,13 +381,10 @@ spec:
             mountPath: /tmp/extensions/
           - name: tmp
             mountPath: /tmp
+        env:
+          {{- toYaml .env | nindent 10 }}
       {{- end }}
-      {{- with .Values.server.extraContainers }}
-        {{- tpl (toYaml .) $ | nindent 6 }}
       {{- end }}
-      {{- with .Values.server.initContainers }}
-      initContainers:
-        {{- tpl (toYaml .) $ | nindent 6 }}
       {{- end }}
       {{- with include "argo-cd.affinity" (dict "context" . "component" .Values.server) }}
       affinity:
