--- a/charts/argo-cd/ci/extension-values.yaml
+++ b/charts/argo-cd/ci/extension-values.yaml
@@ -1,4 +1,6 @@
 # Test Argo CD extension
+crds:
+  keep: false
 # Ref: https://github.com/argoproj-labs/argocd-extension-metrics?tab=readme-ov-file#install-ui-extension
 server:
   extensions:
