--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -28,3 +28,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: Use new Argo CD extension mechanism
+    - kind: added
+      description: Optionally map argocd-repo-server emptydir volumes on custom volumes
