--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2217,7 +2217,7 @@ repoServer:
   #  - name: cmp-tmp
   #    emptyDir: {}
 
-    # use to override emptydir on default volumes
+  # -- Volumes to be used in replacement of emptydir on default volumes
   existingVolumes: {}
   #  gpg_keyring:
   #    persistentVolumeClaim:
