feat(argo-rollout): Add configurable deployment strategy for Argo Rollouts controller
Signed-off-by: Nedal Eskaif <Nedal.Eskaif@goto.com>

--- a/charts/argo-rollouts/templates/controller/deployment.yaml
+++ b/charts/argo-rollouts/templates/controller/deployment.yaml
@@ -17,8 +17,13 @@ spec:
     matchLabels:
       app.kubernetes.io/component: {{ .Values.controller.component }}
       {{- include "argo-rollouts.selectorLabels" . | nindent 6 }}
+  {{- if .Values.controller.deploymentStrategy }}
   strategy:
-    type: Recreate
+    {{- toYaml .Values.controller.deploymentStrategy | nindent 4 }}
+  {{- else }}
+  strategy:
+    type: RollingUpdate
+  {{- end }}
   replicas: {{ .Values.controller.replicas }}
   template:
     metadata:
