Add ingress extra rules
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -28,3 +28,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: removed
       description: Wildcard catch all ingress rule
+    - kind: added
+      description: Ingress extra rules to allow explicit configuration of catch all rule
