Add ingress extra rules
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -30,3 +30,5 @@ annotations:
       description: Support for deprecated features
     - kind: removed
       description: Wildcard catch all ingress rule
+    - kind: added
+      description: Ingress extra rules to allow explicit configuration of catch all rule
