--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1931,6 +1931,7 @@ server:
     annotations: {}
     # -- Additional ingress labels
     labels: {}
+
     # -- Defines which ingress controller will implement the resource
     ingressClassName: ""
 
@@ -1948,6 +1949,7 @@ server:
     pathType: Prefix
 
     # -- Additional ingress paths
+    # @default -- `[]` (See [values.yaml])
     extraPaths: []
       # - path: /*
       #   pathType: Prefix
@@ -2015,9 +2017,12 @@ server:
     # -- List of ingress paths for dedicated [gRPC-ingress]
     paths:
       - /
+
     # -- Ingress path type for dedicated [gRPC-ingress]. One of `Exact`, `Prefix` or `ImplementationSpecific`
     pathType: Prefix
+
     # -- Additional ingress paths for dedicated [gRPC-ingress]
+    # @default -- `[]` (See [values.yaml])
     extraPaths: []
       # - path: /*
       #   pathType: Prefix
@@ -2027,7 +2032,7 @@ server:
       #       port:
       #         name: use-annotation
 
-    # -- Additional ingress rules
+    # -- Additional ingress rules for dedicated [gRPC-ingress]
     # @default -- `[]` (See [values.yaml])
     extraRules: []
       # - host: example.server.local
@@ -2721,6 +2726,7 @@ applicationSet:
       annotations: {}
       # -- Additional ingress labels
       labels: {}
+
       # -- Defines which ingress ApplicationSet controller will implement the resource
       ingressClassName: ""
 
@@ -2733,9 +2739,12 @@ applicationSet:
       # -- List of ingress paths
       paths:
         - /api/webhook
+
       # -- Ingress path type. One of `Exact`, `Prefix` or `ImplementationSpecific`
       pathType: Prefix
+
       # -- Additional ingress paths
+      # @default -- `[]` (See [values.yaml])
       extraPaths: []
         # - path: /*
         #   pathType: Prefix
