--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2219,16 +2219,16 @@ repoServer:
 
   # -- Volumes to be used in replacement of emptydir on default volumes
   existingVolumes: {}
-  #  gpg_keyring:
+  #  gpgKeyring:
   #    persistentVolumeClaim:
   #      claimName: pvc-argocd-repo-server-keyring
-  #  helm_working_dir:
+  #  helmWorkingDir:
   #    persistentVolumeClaim:
   #      claimName: pvc-argocd-repo-server-workdir
   #  tmp:
   #    persistentVolumeClaim:
   #      claimName: pvc-argocd-repo-server-tmp
-  #  var_files:
+  #  varFiles:
   #    persistentVolumeClaim:
   #      claimName: pvc-argocd-repo-server-varfiles
   #  plugins:
