feat(argo-cd): Add optional mapping of argocd-repo-server emptydir to custom volumes (#2410)
* Add optional volumes to replace emptydir

Provide user-driven option to replace emptydir volumes with desired solution

Signed-off-by: Michele Sacchetti <michele.sacchetti@aroundthecode.org>

* existingVolumes default values

provide default values with empy object to ensure default behavior is backward-compatible

Signed-off-by: Michele Sacchetti <michele.sacchetti@aroundthecode.org>

* Update Chart.yaml

bump version

Signed-off-by: Michele Sacchetti <michele.sacchetti@aroundthecode.org>

* Update Chart.yaml

add changelog

Signed-off-by: Michele Sacchetti <michele.sacchetti@aroundthecode.org>

* fix docs

fix docs on new entry

Signed-off-by: Michele Sacchetti <michele.sacchetti@aroundthecode.org>

* fix readme

Signed-off-by: Michele Sacchetti <michele.sacchetti@aroundthecode.org>

* Update README.md.gotmpl

Signoff commit

Signed-off-by: Michele Sacchetti <michele.sacchetti@aroundthecode.org>

* fix readme

Signed-off-by: Michele Sacchetti <michele.sacchetti@aroundthecode.org>

* fixCamelCase
Signed-off-by: Michele Sacchetti <michele.sacchetti@aroundthecode.org>

---------

Signed-off-by: Michele Sacchetti <michele.sacchetti@aroundthecode.org>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2217,6 +2217,24 @@ repoServer:
   #  - name: cmp-tmp
   #    emptyDir: {}
 
+  # -- Volumes to be used in replacement of emptydir on default volumes
+  existingVolumes: {}
+  #  gpgKeyring:
+  #    persistentVolumeClaim:
+  #      claimName: pvc-argocd-repo-server-keyring
+  #  helmWorkingDir:
+  #    persistentVolumeClaim:
+  #      claimName: pvc-argocd-repo-server-workdir
+  #  tmp:
+  #    persistentVolumeClaim:
+  #      claimName: pvc-argocd-repo-server-tmp
+  #  varFiles:
+  #    persistentVolumeClaim:
+  #      claimName: pvc-argocd-repo-server-varfiles
+  #  plugins:
+  #    persistentVolumeClaim:
+  #      claimName: pvc-argocd-repo-server-plugins
+
   # -- Toggle the usage of a ephemeral Helm working directory
   useEphemeralHelmWorkingDir: true
 
