feat(argo-cd): Support Azure DevOps webhook Secret
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-cd/templates/argocd-configs/argocd-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-secret.yaml
@@ -34,6 +34,10 @@ data:
   {{- with .Values.configs.secret.gogsSecret }}
   webhook.gogs.secret: {{ . | b64enc }}
   {{- end }}
+  {{- with .Values.configs.secret.azureDevops }}
+  webhook.azuredevops.username: {{ .username }}
+  webhook.azuredevops.password: {{ .password | b64enc }}
+  {{- end }}
   {{- with .Values.configs.secret.argocdServerTlsConfig }}
   tls.key: {{ .key | b64enc }}
   tls.crt: {{ .crt | b64enc }}
