Remove wildcard catch all ingress rule
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -28,3 +28,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: removed
       description: Support for deprecated features
+    - kind: removed
+      description: Wildcard catch all ingress rule
