Replace ingress paths and hosts with single backend service
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -31,4 +31,7 @@ annotations:
     - kind: removed
       description: Wildcard catch all ingress rule
     - kind: added
-      description: Ingress extra rules to allow explicit configuration of catch all rule
+      description: Ingress extra rules to allow custom ingress custom rules
+    - kind: changed
+      description: Support for multiple ingress hosts and paths refactored into `extraHosts` and `extraPaths`
+
