--- a/charts/argo-cd/templates/argocd-applicationset/webhook-ingress.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/webhook-ingress.yaml
@@ -1,5 +1,4 @@
 {{- if and .Values.applicationSet.enabled .Values.applicationSet.webhook.ingress.enabled -}}
-{{- $servicePort := .Values.applicationSet.service.portName -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -34,11 +33,7 @@ spec:
               service:
                 name: {{ include "argo-cd.applicationSet.fullname" $ }}
                 port:
-                  {{- if kindIs "float64" $servicePort }}
-                  number: {{ $servicePort }}
-                  {{- else }}
-                  name: {{ $servicePort }}
-                  {{- end }}
+                  number: {{ .Values.applicationSet.service.port }}
     {{- end }}
     {{- range .Values.server.ingress.extraHosts }}
     - host: {{ .name | quote }}
@@ -50,11 +45,7 @@ spec:
               service:
                 name: {{ include "argo-cd.applicationSet.fullname" . }}
                 port:
-                  {{- if kindIs "float64" $servicePort }}
-                  number: {{ $servicePort }}
-                  {{- else }}
-                  name: {{ $servicePort }}
-                  {{- end }}
+                  number: {{ .Values.applicationSet.service.port }}
     {{- end }}
     {{- with .Values.applicationSet.webhook.ingress.extraRules }}
       {{- toYaml . | nindent 4 }}
